<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_myAmiibo"
        android:icon="@drawable/ic_amiibo"
        android:title="@string/title_myamiibo" />

    <item
        android:id="@+id/nav_amiiboseries"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Series" />

    <item
        android:id="@+id/nav_home"
        android:enabled="false"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
</menu>
