<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".fragments.HomeFragment">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/search_bar_placeholder"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <include
        android:id="@+id/no_amiibo_view"
        layout="@layout/no_amiibo_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeGroup"
        app:layout_constraintVertical_bias="0.25" />

    <RadioGroup
        android:id="@+id/searchByGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText">

        <TextView
            android:id="@+id/searchByLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/searchLabel_searchBy" />

        <RadioButton
            android:id="@+id/radio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:singleLine="true"
            android:text="@string/searchLabel_Name" />

        <RadioButton
            android:id="@+id/radio_gameSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/searchLabel_gameSeries" />

        <RadioButton
            android:id="@+id/radio_amiiboSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/searchLabel_AmiiboSeries" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/includeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/searchByGroup">

        <TextView
            android:id="@+id/includeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/searchLabel_include" />

        <CheckBox
            android:id="@+id/checkbox_figures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/searchLabel_figures" />

        <CheckBox
            android:id="@+id/checkbox_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/searchLabel_Cards" />

        <CheckBox
            android:id="@+id/checkbox_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/searchLabel_Other" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/amiiboSearchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="16dp"
        android:layoutAnimation="@anim/view_in"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>
