<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/Gear"
        android:layout_width="123dp"
        android:layout_height="116dp"
        android:contentDescription="@string/Settings_gearContentDescription"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/Gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Gear"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bg1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/shape_detailindent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/VersionNum"
            android:layout_width="132dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/Settings_versionNum"
            android:textColor="#676767"
            app:layout_constraintStart_toStartOf="@+id/bg1"
            app:layout_constraintTop_toBottomOf="@+id/Logo" />

        <TextView
            android:id="@+id/Credits"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/Settings_Credits"
            android:textColor="#676767"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VersionNum" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="124dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/Settings_amadboContentDescription"
            android:src="@drawable/amadbo_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/videoAudioLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/Settings_AccessibilityLabel"
                android:textColor="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemOption_Animations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_detailindent">

                <ImageView
                    android:id="@+id/disableAnimIcon"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/Settings_disAnimContentDescription"
                    android:src="@drawable/ic_baseline_animation_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#000000" />

                <TextView
                    android:id="@+id/disableAnimTitle"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/Settings_reduceAnimLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/disableAnimIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/disableAnimSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:checked="false"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemOption_Music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_detailindent">

                <ImageView
                    android:id="@+id/disableMusicIcon"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/Settings_disableMusicCD"
                    android:src="@drawable/ic_baseline_music_off_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#000000" />

                <TextView
                    android:id="@+id/disableMusicTitle"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/Settings_disableMusicLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/disableMusicIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/disableMusicSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:checked="false"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemOption_Sound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_detailindent">

                <ImageView
                    android:id="@+id/disableSoundIcon"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/Settings_disableSoundContentDescription"
                    android:src="@drawable/ic_baseline_volume_off_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#000000" />

                <TextView
                    android:id="@+id/disableSoundTitle"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/Settings_disableSoundLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/disableSoundIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/disableSoundSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:checked="false"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/searchSettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/Settings_searchLabel"
                android:textColor="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemOption_SearchLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_detailindent">

                <ImageView
                    android:id="@+id/searchLayoutIcon"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/Settings_searchLayoutContentDescription"
                    android:src="@drawable/ic_dashboard_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#000000" />

                <TextView
                    android:id="@+id/searchLayoutTitle"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/Settings_searchGridLayoutLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/searchLayoutIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/searchLayoutSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:checked="false"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="24dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/clearAppDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/Settings_dangerZoneLabel"
                android:textColor="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemOption_Clear"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/shape_detailindent">

                <ImageView
                    android:id="@+id/clearDataIcon"
                    android:layout_width="42dp"
                    android:layout_height="41dp"
                    android:contentDescription="@string/Settings_clearAppDataContentDescription"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#FF0000" />

                <TextView
                    android:id="@+id/clearDataTitle"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/Settings_clearAppDataLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/fab_red"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/clearDataIcon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>