<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridView"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:background="@drawable/bs_back"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/blue_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bs_back"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="183dp"
            android:layout_height="133dp"
            android:contentDescription="@string/amiibo_cd"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/amiibo_placeholder"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/amiibo_name"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/placeholder_amiibo_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

        <TextView
            android:id="@+id/amiibo_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/placeholder_amiibo_series"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>